--- a/.github/workflows/test1-cicd.yaml
+++ b/.github/workflows/test1-cicd.yaml
@@ -44,7 +44,7 @@ jobs:
         shell: bash
         run: |
           echo ${{needs.ci.outputs.commit_id}}
-          pip install yq
+          pip install yq --break-system-packages
           yq -Yi '.image.tag = "${{needs.ci.outputs.commit_id}}"' charts/test1/values-dev.yaml
 
       - name: Commit changes
@@ -55,14 +55,14 @@ jobs:
       - name: Install argocd
         shell: bash
         run: |
-          curl -ksSL -o argocd https://localhost:31801/download/argocd-linux-amd64
+          curl -ksSL -o argocd https://localhost:32645/download/argocd-linux-amd64
           chmod +x argocd
           sudo mv ./argocd /usr/local/bin/argocd
 
       - name: argocd login
         shell: bash
         run: |
-          argocd login localhost:31801 \
+          argocd login localhost:32645 \
             --insecure  \
             --grpc-web \
             --username admin \
@@ -91,3 +91,4 @@ jobs:
         shell: bash
         run: |
           argocd app sync test1
+
